--- a/roles/linux/tasks/main.yml
+++ b/roles/linux/tasks/main.yml
@@ -2,6 +2,8 @@
 
 - name: install python
   import_tasks: python.yml
+- name: set hostname
+  import_tasks: hostname.yml
 - name: configure kernel
   import_tasks: kernel-config.yml
 - name: setup dns
