--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,6 @@
 stages:
   - prepare
+  - pre-provision
   - provision
   - build
   - tests
@@ -34,11 +35,51 @@ e2e-tests image:
     - docker push ${E2E_IMAGE}
 
 lint:
-  stage: provision
+  stage: pre-provision
   image: ${DEV_TOOLS_IMAGE}
   allow_failure: true
   script:
     - ansible-lint *.yml roles
+
+.node: &node
+  stage: pre-provision
+  image: ${DEV_TOOLS_IMAGE}
+  retry: 2
+  script:
+    - mkdir -p ~/.ssh/${CI_PROVISION}
+    - echo ${SSH_KEY_PRIVATE} | base64 -d > ~/.ssh/${CI_PROVISION}/id_rsa
+    - echo ${SSH_KEY_PUBLIC}  | base64 -d > ~/.ssh/${CI_PROVISION}/id_rsa.pub
+    - chmod 400 ~/.ssh/${CI_PROVISION}/id_rsa ~/.ssh/${CI_PROVISION}/id_rsa.pub
+    - touch inventory
+    - make ${CI_PROVISION}-provision
+
+node1:
+  <<: *node
+  variables:
+    ANSIBLE_OPTIONS: --limit=node1
+
+node2:
+  <<: *node
+  variables:
+    ANSIBLE_OPTIONS: --limit=node2
+
+node3:
+  <<: *node
+  variables:
+    ANSIBLE_OPTIONS: --limit=node3
+
+node4:
+  <<: *node
+  variables:
+    ANSIBLE_OPTIONS: --limit=node4
+
+
+destroy now:
+  stage: pre-provision
+  image: ${DEV_TOOLS_IMAGE}
+  script:
+    - make ${CI_PROVISION}-destroy
+  when: manual
 
 provision:
   stage: provision
@@ -65,13 +106,6 @@ destroy:
   retry: 2
   script:
     - make ${CI_PROVISION}-destroy
-
-destroy now:
-  stage: provision
-  image: ${DEV_TOOLS_IMAGE}
-  script:
-    - make ${CI_PROVISION}-destroy
-  when: manual
 
 deploy:
   stage: build
