--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -44,32 +44,37 @@ lint:
 .node: &node
   stage: pre-provision
   image: ${DEV_TOOLS_IMAGE}
-  retry: 2
   script:
     - mkdir -p ~/.ssh/${CI_PROVISION}
     - echo ${SSH_KEY_PRIVATE} | base64 -d > ~/.ssh/${CI_PROVISION}/id_rsa
     - echo ${SSH_KEY_PUBLIC}  | base64 -d > ~/.ssh/${CI_PROVISION}/id_rsa.pub
     - chmod 400 ~/.ssh/${CI_PROVISION}/id_rsa ~/.ssh/${CI_PROVISION}/id_rsa.pub
     - touch inventory
+    - make ${CI_PROVISION}-destroy
     - make ${CI_PROVISION}-provision
+    - make benchmark-nodes
 
 node1:
   <<: *node
+  retry: 2
   variables:
     ANSIBLE_OPTIONS: -e PROVISION_NODE=node1
 
 node2:
   <<: *node
+  retry: 2
   variables:
     ANSIBLE_OPTIONS: -e PROVISION_NODE=node2
 
 node3:
   <<: *node
+  retry: 2
   variables:
     ANSIBLE_OPTIONS: -e PROVISION_NODE=node3
 
 node4:
   <<: *node
+  retry: 2
   variables:
     ANSIBLE_OPTIONS: -e PROVISION_NODE=node4
 
