--- a/roles/digital-ocean-provision/tasks/main.yml
+++ b/roles/digital-ocean-provision/tasks/main.yml
@@ -44,7 +44,7 @@
 
 - name: add hosts to inventory
   add_host:
-    name: "{{ DIGITAL_OCEAN_NODES_PREFIX }}-{{ item.item.name }}"
+    name: "{{ item.item.name }}"
     groups: "{{ item.item.groups }}"
     ansible_host: "{{ item.droplet.ip_address }}"
   with_items: "{{ droplet_details.results }}"
