--- a/prepare-benchmarks.yml
+++ b/prepare-benchmarks.yml
@@ -1,5 +1,14 @@
 ---
 - hosts: all
+  tasks:
+    - name: wait for ssh to be available
+      wait_for:
+        port: 22
+        host: "{{ ansible_host }}"
+        search_regex: OpenSSH
+      delegate_to: localhost
+
+- hosts: all
   roles:
     - { role: linux }
     - { role: prepare-benchmarks }
