fixup! fixup! fixup! benchmark nodes before running tests

--- a/prepare-benchmarks.yml
+++ b/prepare-benchmarks.yml
@@ -15,11 +15,16 @@
   tasks:
     - name: benchmark cpu
       raw: timeout 10 sysbench --threads=2 --events=10000 cpu run
+      tags: [skip_ansible_lint]
     - name: benchmark threads
       raw: timeout 10 sysbench --events=10000 threads run
+      tags: [skip_ansible_lint]
     - name: benchmark disk
       raw: timeout 6 dd if=/dev/zero of=testfile bs=1G count=1 oflag=dsync
+      tags: [skip_ansible_lint]
     - name: benchmark memory
       raw: timeout 10 mbw -n 50 255
+      tags: [skip_ansible_lint]
     - name: benchmark network
       raw: timeout 3 curl -o /dev/null -s -L http://speedtest-fra1.digitalocean.com/100mb.test
+      tags: [skip_ansible_lint]
