--- a/kubernetes.yml
+++ b/kubernetes.yml
@@ -10,9 +10,8 @@
 
 - hosts: all
   roles:
-#    - { role: linux }
-##    - { role: docker }
-    - { role: wireguard } # replace by https://github.com/cmulk/wireguard-docker
+    - { role: linux }
+#    - { role: docker }
     - { role: node }
     - { role: registry-mirror }
 
