disabled AAAA (ipv6) in CoreDNS
@see https://github.com/coredns/coredns/issues/2039#issuecomment-416588977

--- a/addons/core-dns.yaml
+++ b/addons/core-dns.yaml
@@ -65,6 +65,9 @@ data:
         errors
         health
         ready
+        template ANY AAAA . {
+          rcode NXDOMAIN
+        }
         kubernetes cluster.local in-addr.arpa ip6.arpa {
             pods insecure
             fallthrough in-addr.arpa ip6.arpa
