--- a/addons/weave-daemonset-k8s.yaml
+++ b/addons/weave-daemonset-k8s.yaml
@@ -137,7 +137,7 @@ items:
       - kind: ServiceAccount
         name: weave-net
         namespace: kube-system
-  - apiVersion: extensions/v1beta1
+  - apiVersion: apps/v1
     kind: DaemonSet
     metadata:
       name: weave-net
@@ -154,6 +154,9 @@ items:
         name: weave-net
       namespace: kube-system
     spec:
+      selector:
+        matchLabels:
+          name: weave-net
       minReadySeconds: 5
       template:
         metadata:
