--- a/roles/etcd-certificates/files/config.json
+++ b/roles/etcd-certificates/files/config.json
@@ -4,15 +4,7 @@
             "expiry": "87600h"
         },
         "profiles": {
-            "server": {
-                "expiry": "87600h",
-                "usages": [
-                    "signing",
-                    "key encipherment",
-                    "server auth"
-                ]
-            },
-            "client": {
+            "kube-apiserver-etcd-client": {
                 "expiry": "87600h",
                 "usages": [
                     "signing",
@@ -20,13 +12,29 @@
                     "client auth"
                 ]
             },
-            "member": {
+            "kube-etcd-healthcheck-client": {
+                "expiry": "87600h",
+                "usages": [
+                    "signing",
+                    "key encipherment",
+                    "client auth"
+                ]
+            },
+            "kube-etcd-peer": {
                 "expiry": "87600h",
                 "usages": [
                     "signing",
                     "key encipherment",
                     "server auth",
                     "client auth"
+                ]
+            },
+            "kube-etcd": {
+                "expiry": "87600h",
+                "usages": [
+                    "signing",
+                    "key encipherment",
+                    "server auth"
                 ]
             }
         }
