--- a/roles/master/tasks/main.yml
+++ b/roles/master/tasks/main.yml
@@ -22,7 +22,10 @@
     dest: "/etc/kubernetes/ssl/{{ item.remote }}"
   with_items:
     - { local: 'ca.pem', remote: 'kubernetes-ca.pem' }
+    - { local: 'ca-key.pem', remote: 'kubernetes-ca-key.pem' }
     - { local: 'client-ca.pem', remote: 'kubernetes-client-ca.pem' }
+    - { local: 'proxy-client.pem', remote: 'proxy-client.pem' }
+    - { local: 'proxy-client-key.pem', remote: 'proxy-client-key.pem' }
     - { local: 'master.pem', remote: 'master.pem' }
     - { local: 'master-key.pem', remote: 'master-key.pem' }
   no_log: true
